# drogon-template

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/config/: AllowedOrigins.hpp
src/db/: AccessLog.cpp  AccessLog.hpp  ApiKey.cpp  ApiKey.hpp  IpList.cpp  IpList.hpp  initialize.cpp  initialize.hpp
src/routes/: RootHandler.cpp  SqliteApiHandler.cpp
src/security/: AllowedOrigins.cpp  ApiKeyValidator.cpp  ApiKeyValidator.hpp  IpControl.cpp  IpControl.hpp  RateLimiter.cpp  RateLimiter.hpp  SecurityMiddleware.cpp  SecurityMiddleware.hpp
